--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@types/jest": "^25.1.1",
-    "@types/request-promise": "^4.1.45",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
@@ -53,7 +52,6 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "request-promise": "^4.2.5"
+    "axios": "^0.19.2"
   }
 }
