--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
+    "nock": "^11.7.2",
     "prettier": "^1.19.1",
     "rollup": "^1.30.1",
     "rollup-plugin-peer-deps-external": "^2.2.0",
