--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "module": "build/index.es.js",
   "jsnext:main": "build/index.es.js",
   "scripts": {
-    "prebuild": "npm run lint && npm run test",
     "build": "rollup -c",
     "lint": "npx eslint src/**/*.ts",
     "lint:fix": "npx eslint --fix src/**/*.ts",
@@ -34,6 +33,7 @@
     "@rollup/plugin-json": "^4.0.1",
     "@rollup/plugin-node-resolve": "^7.0.0",
     "@types/jest": "^25.1.1",
+    "@types/node": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
     "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
@@ -42,6 +42,7 @@
     "jest": "^25.1.0",
     "nock": "^11.7.2",
     "prettier": "^1.19.1",
+    "queue": "^6.0.1",
     "rollup": "^1.30.1",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-typescript2": "^0.25.3",
