--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "jsnext:main": "build/index.es.js",
   "scripts": {
     "build": "rollup -c",
+    "compile": "tsc -p ./",
     "lint": "npx eslint src/**/*.ts",
     "lint:fix": "npx eslint --fix src/**/*.ts",
     "watch": "rollup -w -c",
@@ -30,31 +31,37 @@
   },
   "homepage": "https://github.com/DeepCodeAI/tsc#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.1",
-    "@rollup/plugin-json": "^4.0.1",
-    "@rollup/plugin-node-resolve": "^7.0.0",
-    "@types/jest": "^25.1.1",
-    "@types/node": "^13.7.4",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^25.1.0",
-    "nock": "^11.7.2",
-    "prettier": "^1.19.1",
+    "@types/jest": "^26.0.12",
+    "@types/node": "^14.6.2",
+    "eslint": "^7.8.1",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "jest": "^26.4.2",
+    "nock": "^13.0.4",
+    "prettier": "^2.1.1",
     "queue": "^6.0.1",
-    "rollup": "^1.30.1",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "ts-jest": "^25.1.0",
-    "typescript": "^3.7.5"
+    "rollup": "^2.26.9",
+    "rollup-plugin-peer-deps-external": "^2.2.3",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.20.0",
+    "@types/lodash": "^4.14.159",
+    "lodash": "^4.17.19",
+    "ignore": "^5.1.8",
+    "@deepcode/dcignore": "^1.0.2"
   }
 }
