--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "outDir": "build",
     "module": "esnext",
-    "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "target": "es6",
+    "lib": ["es6", "dom", "es7", "es2017", "es2018", "es2019"],
     "sourceMap": true,
     "allowJs": false,
     "declaration": true,
