--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.3.1",
   "description": "Typescript consumer of Deepcode public API",
   "main": "build/index.js",
-  "module": "build/index.es.js",
-  "jsnext:main": "build/index.es.js",
+  "engines": {
+    "node": ">=14.9.0"
+  },
+  "type": "commonjs",
   "scripts": {
     "build": "rollup -c",
     "compile": "tsc -p ./",
@@ -22,7 +24,7 @@
   },
   "keywords": [
     "deepcode",
-    "api"
+    "api client"
   ],
   "author": "DeepCodeAI",
   "license": "MIT",
@@ -30,6 +32,10 @@
     "url": "https://github.com/DeepCodeAI/tsc/issues"
   },
   "homepage": "https://github.com/DeepCodeAI/tsc#readme",
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
@@ -51,10 +57,6 @@
     "@rollup/plugin-node-resolve": "^9.0.0",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node"
   },
   "dependencies": {
     "axios": "^0.20.0",
