code cleanup of unneeded interfaces

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
     "no-await-in-loop": "warn",
     "no-underscore-dangle": "off",
     "max-classes-per-file": "off",
+    "no-use-before-define": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
     "@typescript-eslint/no-unsafe-assignment": "warn"
   },
