--- a/tests/sample-repo/.dcignore
+++ b/tests/sample-repo/.dcignore
@@ -499,446 +499,6 @@ pnacl/
 docs/_book
 test/
 
-# Kentico
-!CMS/CMSAdminControls/*/
-!CMS/CMSModules/System/*/
-!CMS/App_Data/CIRepository/**
-CMS/App_Data/AzureCache
-CMS/App_Data/AzureTemp
-CMS/App_Data/CMSTemp
-CMS/App_Data/Persistent
-CMS/CMSSiteUtils/Export
-CMS/CMSSiteUtils/Import
-CMS/App_Data/CMSModules/SmartSearch/**
-!CMS/App_Data/CMSModules/SmartSearch/*/
-!CMS/App_Data/CMSModules/SmartSearch/_StopWords/**
-!CMS/App_Data/CMSModules/SmartSearch/_Synonyms/**
-CMS/App_Data/DancingGoat
-CMS/App_Data/Templates/CommunitySite
-CMS/App_Data/Templates/CorporateSite
-CMS/App_Data/Templates/DancingGoat
-CMS/App_Data/Templates/EcommerceSite
-CMS/App_Data/Templates/IntranetPortal
-CMS/App_Data/Templates/PersonalSite
-CMS/App_Themes/CommunitySite
-CMS/App_Themes/CorporateSite
-CMS/App_Themes/EcommerceSite
-CMS/App_Themes/IntranetPortal*
-CMS/App_Themes/PersonalSite
-CMS/CMSTemplates/CorporateSite
-CMS/CommunitySite
-CMS/CorporateSite
-CMS/DancingGoat
-CMS/EcommerceSite
-CMS/IntranetPortal
-CMS/PersonalSite
-
-# InforCMS
-[Mm]odel/[Dd]eployment
-!Model/Portal/*/SupportFiles/[Bb]in/
-!Model/Portal/PortalTemplates/*/SupportFiles/[Bb]in
-
-# Xilinx
-*_synth_*
-*/*/bd/*/hdl
-*/*/*/bd/*/hdl
-*/*/bd/*/ip/*/*/
-*/*/*/bd/*/ip/*/*/
-hw_handoff
-ipshared
-
-# Pimcore
-/pimcore
-/website/var/assets/*
-/website/var/backup/*
-/website/var/cache/*
-/website/var/classes/Object*
-!/website/var/classes/objectbricks
-/website/var/config/Geo*
-/website/var/config/object/*
-/website/var/config/portal/*
-/website/var/config/sqlreport/*
-/website/var/email/*
-/website/var/recyclebin/*
-/website/var/search/*
-/website/var/system/*
-/website/var/tmp/*
-/website/var/versions/asset/*
-/website/var/versions/document/*
-/website/var/versions/object/*
-/website/var/user-image/*
-
-# Magento2
-/sitemap
-/pub/sitemap
-/app/config_sandbox
-/app/code/Magento/TestModule*
-/pub/media/attribute/*
-/pub/media/analytics/*
-/pub/media/catalog/*
-/pub/media/customer/*
-/pub/media/downloadable/*
-/pub/media/favicon/*
-/pub/media/import/*
-/pub/media/logo/*
-/pub/media/theme/*
-/pub/media/theme_customization/*
-/pub/media/wysiwyg/*
-/pub/media/tmp/*
-/pub/media/captcha/*
-/pub/static/*
-/var/*
-/vendor/*
-/generated/*
-
-# Bitrix
-/bitrix/*
-!/bitrix/templates
-!/bitrix/components
-/bitrix/components/bitrix
-!/bitrix/gadgets
-/bitrix/gadgets/bitrix
-!/bitrix/php_interface/
-/upload/
-
-# Drupal7
-files/
-sites/*/files
-sites/*/private
-sites/*/translations
-/includes
-/misc
-/modules
-/profiles
-/scripts
-/themes
-
-# CodeSniffer
-/wpcs/*
-
-# Jigsaw
-build_*
-
-# Magento1
-/media/*
-!/media/customer
-/media/customer/*
-!/media/dhl
-/media/dhl/*
-!/media/downloadable
-/media/downloadable/*
-!/media/xmlconnect
-/media/xmlconnect/*
-!/media/xmlconnect/custom
-/media/xmlconnect/custom/*
-!/media/xmlconnect/original
-/media/xmlconnect/original/*
-!/media/xmlconnect/system
-/media/xmlconnect/system/*
-/var/*
-!/var/package
-/var/package/*
-
-# ThinkPHP
-/Application/Runtime/
-
-# AtmelStudio
-[Dd]ebug/
-[Rr]elease/
-
-# IAR_EWARM
-EWARM/**/Obj
-EWARM/**/List
-EWARM/**/Exe
-EWARM/settings
-
-# esp-idf
-build/
-sdkconfig
-
-# Concrete5
-error_log
-files/cache/*
-files/tmp/*
-/application/files/*
-/updates/*
-
-# Drupal
-/sites/*/files
-/sites/*/public
-/sites/*/private
-/sites/*/files-public
-/sites/*/files-private
-/sites/*/translations
-/sites/*/tmp
-/sites/*/cache
-/sites/simpletest
-/core
-/vendor
-
-# Mercury
-Mercury/
-
-# Joomla
-/administrator/cache/*
-/administrator/components/com_actionlogs/*
-/administrator/components/com_admin/*
-/administrator/components/com_ajax/*
-/administrator/components/com_associations/*
-/administrator/components/com_banners/*
-/administrator/components/com_cache/*
-/administrator/components/com_categories/*
-/administrator/components/com_checkin/*
-/administrator/components/com_config/*
-/administrator/components/com_contact/*
-/administrator/components/com_content/*
-/administrator/components/com_contenthistory/*
-/administrator/components/com_cpanel/*
-/administrator/components/com_fields/*
-/administrator/components/com_finder/*
-/administrator/components/com_installer/*
-/administrator/components/com_joomlaupdate/*
-/administrator/components/com_languages/*
-/administrator/components/com_login/*
-/administrator/components/com_media/*
-/administrator/components/com_menus/*
-/administrator/components/com_messages/*
-/administrator/components/com_modules/*
-/administrator/components/com_newsfeeds/*
-/administrator/components/com_plugins/*
-/administrator/components/com_postinstall/*
-/administrator/components/com_privacy/*
-/administrator/components/com_redirect/*
-/administrator/components/com_search/*
-/administrator/components/com_tags/*
-/administrator/components/com_templates/*
-/administrator/components/com_users/*
-/administrator/help/*
-/administrator/includes/*
-/administrator/language/overrides/*
-/administrator/logs/*
-/administrator/modules/mod_custom/*
-/administrator/modules/mod_feed/*
-/administrator/modules/mod_latest/*
-/administrator/modules/mod_latestactions/*
-/administrator/modules/mod_logged/*
-/administrator/modules/mod_login/*
-/administrator/modules/mod_menu/*
-/administrator/modules/mod_multilangstatus/*
-/administrator/modules/mod_online/*
-/administrator/modules/mod_popular/*
-/administrator/modules/mod_privacy_dashboard/*
-/administrator/modules/mod_quickicon/*
-/administrator/modules/mod_sampledata/*
-/administrator/modules/mod_stats_admin/*
-/administrator/modules/mod_status/*
-/administrator/modules/mod_submenu/*
-/administrator/modules/mod_title/*
-/administrator/modules/mod_toolbar/*
-/administrator/modules/mod_unread/*
-/administrator/modules/mod_version/*
-/administrator/templates/hathor/*
-/administrator/templates/isis/*
-/administrator/templates/system/*
-/bin/*
-/cache/*
-/cli/*
-/components/com_ajax/*
-/components/com_banners/*
-/components/com_config/*
-/components/com_contact/*
-/components/com_content/*
-/components/com_contenthistory/*
-/components/com_fields/*
-/components/com_finder/*
-/components/com_mailto/*
-/components/com_media/*
-/components/com_menus/*
-/components/com_modules/*
-/components/com_newsfeeds/*
-/components/com_privacy/*
-/components/com_search/*
-/components/com_tags/*
-/components/com_users/*
-/components/com_wrapper/*
-/images/banners/*
-/images/headers/*
-/images/sampledata/*
-/images/joomla*
-/includes/*
-/installation/*
-/language/overrides/*
-/layouts/joomla/*
-/layouts/libraries/*
-/layouts/plugins/*
-/libraries/cms/*
-/libraries/fof/*
-/libraries/idna_convert/*
-/libraries/joomla/*
-/libraries/legacy/*
-/libraries/php-encryption/*
-/libraries/phpass/*
-/libraries/phpmailer/*
-/libraries/phputf8/*
-/libraries/simplepie/*
-/libraries/vendor/*
-/media/cms/*
-/media/com_associations/*
-/media/com_contact/*
-/media/com_content/*
-/media/com_contenthistory/*
-/media/com_fields/*
-/media/com_finder/*
-/media/com_joomlaupdate/*
-/media/com_menus/*
-/media/com_modules/*
-/media/com_wrapper/*
-/media/contacts/*
-/media/editors/*
-/media/jui/*
-/media/mailto/*
-/media/media/*
-/media/mod_languages/*
-/media/mod_sampledata/*
-/media/overrider/*
-/media/plg_captcha_recaptcha/*
-/media/plg_captcha_recaptcha_invisible/*
-/media/plg_quickicon_extensionupdate/*
-/media/plg_quickicon_joomlaupdate/*
-/media/plg_quickicon_privacycheck/*
-/media/plg_system_highlight/*
-/media/plg_system_stats/*
-/media/plg_twofactorauth_totp/*
-/media/system/*
-/modules/mod_articles_archive/*
-/modules/mod_articles_categories/*
-/modules/mod_articles_category/*
-/modules/mod_articles_latest/*
-/modules/mod_articles_news/*
-/modules/mod_articles_popular/*
-/modules/mod_banners/*
-/modules/mod_breadcrumbs/*
-/modules/mod_custom/*
-/modules/mod_feed/*
-/modules/mod_finder/*
-/modules/mod_footer/*
-/modules/mod_languages/*
-/modules/mod_login/*
-/modules/mod_menu/*
-/modules/mod_random_image/*
-/modules/mod_related_items/*
-/modules/mod_search/*
-/modules/mod_stats/*
-/modules/mod_syndicate/*
-/modules/mod_tags_popular/*
-/modules/mod_tags_similar/*
-/modules/mod_users_latest/*
-/modules/mod_whosonline/*
-/modules/mod_wrapper/*
-/plugins/actionlog/joomla/*
-/plugins/authentication/cookie/*
-/plugins/authentication/example/*
-/plugins/authentication/gmail/*
-/plugins/authentication/joomla/*
-/plugins/authentication/ldap/*
-/plugins/captcha/recaptcha/*
-/plugins/captcha/recaptcha_invisible/*
-/plugins/content/confirmconsent/*
-/plugins/content/contact/*
-/plugins/content/emailcloak/*
-/plugins/content/example/*
-/plugins/content/fields/*
-/plugins/content/finder/*
-/plugins/content/geshi/*
-/plugins/content/joomla/*
-/plugins/content/loadmodule/*
-/plugins/content/pagebreak/*
-/plugins/content/pagenavigation/*
-/plugins/content/vote/*
-/plugins/editors/codemirror/*
-/plugins/editors/none/*
-/plugins/editors/tinymce/*
-/plugins/editors-xtd/article/*
-/plugins/editors-xtd/contact/*
-/plugins/editors-xtd/fields/*
-/plugins/editors-xtd/image/*
-/plugins/editors-xtd/menu/*
-/plugins/editors-xtd/module/*
-/plugins/editors-xtd/pagebreak/*
-/plugins/editors-xtd/readmore/*
-/plugins/extension/example/*
-/plugins/extension/joomla/*
-/plugins/fields/calendar/*
-/plugins/fields/checkboxes/*
-/plugins/fields/color/*
-/plugins/fields/editor/*
-/plugins/fields/imagelist/*
-/plugins/fields/integer/*
-/plugins/fields/list/*
-/plugins/fields/media/*
-/plugins/fields/radio/*
-/plugins/fields/repeatable/*
-/plugins/fields/sql/*
-/plugins/fields/text/*
-/plugins/fields/textarea/*
-/plugins/fields/url/*
-/plugins/fields/user/*
-/plugins/fields/usergrouplist/*
-/plugins/finder/categories/*
-/plugins/finder/contacts/*
-/plugins/finder/content/*
-/plugins/finder/newsfeeds/*
-/plugins/finder/tags/*
-/plugins/installer/folderinstaller/*
-/plugins/installer/packageinstaller/*
-/plugins/installer/urlinstaller/*
-/plugins/privacy/actionlogs/*
-/plugins/privacy/consents/*
-/plugins/privacy/contact/*
-/plugins/privacy/content/*
-/plugins/privacy/message/*
-/plugins/privacy/user/*
-/plugins/quickicon/extensionupdate/*
-/plugins/quickicon/joomlaupdate/*
-/plugins/quickicon/phpversioncheck/*
-/plugins/quickicon/privacycheck/*
-/plugins/sampledata/blog/*
-/plugins/search/categories/*
-/plugins/search/contacts/*
-/plugins/search/content/*
-/plugins/search/newsfeeds/*
-/plugins/search/tags/*
-/plugins/search/weblinks/*
-/plugins/system/actionlogs/*
-/plugins/system/cache/*
-/plugins/system/debug/*
-/plugins/system/fields/*
-/plugins/system/highlight/*
-/plugins/system/languagecode/*
-/plugins/system/languagefilter/*
-/plugins/system/log/*
-/plugins/system/logout/*
-/plugins/system/logrotation/*
-/plugins/system/p3p/*
-/plugins/system/privacyconsent/*
-/plugins/system/redirect/*
-/plugins/system/remember/*
-/plugins/system/sef/*
-/plugins/system/sessiongc/*
-/plugins/system/stats/*
-/plugins/system/updatenotification/*
-/plugins/twofactorauth/totp/*
-/plugins/twofactorauth/yubikey/*
-/plugins/user/contactcreator/*
-/plugins/user/example/*
-/plugins/user/joomla/*
-/plugins/user/profile/*
-/plugins/user/terms/*
-/templates/beez3/*
-/templates/protostar/*
-/templates/system/*
-/tmp/*
-
 # Yii
 assets/*
 protected/runtime/*
@@ -1248,7 +808,8 @@ lib/
 *.app/
 
 # macOS
-Icon
+Icon
+
 Network Trash Folder
 Temporary Items
 
@@ -1544,3 +1105,5 @@ build/
 
 # Elisp
 *~
+
+models
