--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "build",
     "target": "es2018",
     "module": "CommonJS",
-    "lib": ["es6", "dom", "es7", "es2017", "es2018"],
+    "lib": ["esnext"],
     "sourceMap": true,
     "allowJs": false,
     "declaration": true,
