--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build",
+    "outDir": "./dist",
     "target": "es2018",
-    "module": "CommonJS",
     "lib": ["esnext"],
+    "module": "es6",
     "sourceMap": true,
     "allowJs": false,
     "declaration": true,
+    "declarationDir": "./dist",
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitThis": true,
@@ -17,9 +18,10 @@
     "noUnusedParameters": true,
     "esModuleInterop": true
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "exclude": [
     "node_modules",
-    "build"
   ]
 }
