--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@deepcode/tsc",
   "version": "2.0.0",
   "description": "Typescript consumer of Deepcode public API",
-  "main": "dist/index.es.js",
+  "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "files": ["dist"],
