--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
   "devDependencies": {
     "@types/jest": "^26.0.12",
     "@types/node": "^14.6.2",
-    "eslint": "^7.8.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint": "^7.8.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
@@ -50,14 +50,16 @@
     "yalc": "^1.0.0-pre.44"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.159",
+    "@types/micromatch": "^4.0.1",
+    "@types/flat-cache": "^2.0.0",
     "@deepcode/dcignore": "^1.0.2",
     "axios": "^0.19.0",
-    "@types/lodash": "^4.14.159",
     "lodash": "^4.17.19",
     "ignore": "^5.1.8",
     "queue": "^6.0.1",
     "fast-glob": "^3.2.4",
-    "@types/flat-cache": "^2.0.0",
+    "micromatch": "^4.0.2",
     "flat-cache": "^2.0.1"
   }
 }
