--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/lodash": "^4.14.159",
     "@types/micromatch": "^4.0.1",
     "@types/flat-cache": "^2.0.0",
+    "@types/sarif": "^2.1.3",
     "@deepcode/dcignore": "^1.0.2",
     "axios": "^0.19.0",
     "lodash": "^4.17.19",
