--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "prettier": "^2.1.1",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2",
-    "yalc": "^1.0.0-pre.44"
+    "yalc": "^1.0.0-pre.44",
+    "jsonschema": "^1.2.11"
   },
   "dependencies": {
     "@types/lodash": "^4.14.159",
