--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@deepcode/tsc",
-  "version": "2.1.0",
-  "description": "Typescript consumer of Deepcode public API",
+  "version": "2.2.0",
+  "description": "Typescript consumer of Deepcode public API (deprecated)",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
