--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "lodash.union": "^4.6.0",
     "ignore": "^5.1.8",
     "queue": "^6.0.1",
-    "fast-glob": "^3.2.5",
+    "@snyk/fast-glob": "^3.2.6-patch",
     "micromatch": "^4.0.2",
     "flat-cache": "^3.0.4",
     "@types/uuid": "^8.3.0",
